# example-cli-rust

./: Cargo.toml
src/: main.rs
tests/: integration_test.rs
