[package]
name = "example-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.1"
config = "0.13.3"
directories = "5.0.1"
env_logger = "0.10.0"
log = "0.4.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
toml = "0.7.4"
