[package]
name = "example-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.1"
config = "0.13.3"
directories = "5.0.1"
env_logger = "0.10.0"
log = "0.4.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
toml = "0.7.4"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
temp-env = "0.3.4"
tempfile = "3.5.0"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
